fix: Toast cross icon on small screens
Toast message width is adjusted according
to screen size that was larger on small
screens causing the cross icon on toast to
be unclickable and unscrollable.

VAN-911

--- a/src/Toast/_Toast.scss
+++ b/src/Toast/_Toast.scss
@@ -5,7 +5,6 @@
   background-color: $toast-background-color;
   box-shadow: $toast-box-shadow;
   margin: 0;
-  min-width: $toast-max-width;
   padding: 1rem;
   position: relative;
   border-radius: $toast-border-radius;
@@ -46,6 +45,6 @@
   }
 
   @media only screen and (min-width: 768px) {
-    max-width: $toast-max-width;
+    width: $toast-max-width;
   }
 }
